syntax = "proto3";

package io.growing.tunnel.protocol;
option java_package = "io.growing.collector.tunnel.protocol";
option java_multiple_files = true;
option java_outer_classname = "EventV3Protocol";
option objc_class_prefix = "GrowingPB";

message EventV3Dto {

    reserved 3, 14, 23, 41, 43;
    reserved "gio_id", "global_sequence_id", "page_show_timestamp", "operating_system_version";

    string device_id = 1;
    string user_id = 2;
    string session_id = 4;
    string data_source_id = 5;
    EventType event_type = 6;
    string platform = 7;
    int64 timestamp = 8;
    string domain = 9;
    string path = 10;
    string query = 11;
    string title = 12;
    string referral_page = 13;
    int32 event_sequence_id = 15;
    int32 screen_height = 16;
    int32 screen_width = 17;
    string language = 18;
    string sdk_version = 19;
    string app_version = 20;
    map<string, string> extra_sdk = 21;
    string event_name = 22;
    map<string, string> attributes = 24;
    ResourceItem resource_item = 25;
    string protocol_type = 26;
    string text_value = 27;
    string xpath = 28;
    int32 index = 29;
    string hyperlink = 30;
    string url_scheme = 31;
    string app_state = 32;
    string network_state = 33;
    string app_channel = 34;
    string page_name = 35; // useless
    string platform_version = 36;
    string device_brand = 37;
    string device_model = 38;
    string device_type = 39;
    string operating_system = 40;
    string app_name = 42;
    double latitude = 44;
    double longitude = 45;
    string imei = 46;
    string android_id = 47;
    string oaid = 48;
    string google_advertising_id = 49;
    string idfa = 50;
    string idfv = 51;
    string orientation = 52;
    string project_key = 53;
    int64 send_time = 54;
    string user_key = 55;
    string xcontent = 56;
    string xindex = 57;
}

message ResourceItem {
    string id = 1;
    string key = 2;
    map<string, string> attributes = 3;
}

message EventV3List {
    repeated EventV3Dto values = 1;
}

enum EventType {
    VISIT = 0;
    CUSTOM = 1;
    VISITOR_ATTRIBUTES = 2;
    LOGIN_USER_ATTRIBUTES = 3;
    CONVERSION_VARIABLES = 4;
    APP_CLOSED = 5;
    PAGE = 6;
    PAGE_ATTRIBUTES = 7;
    VIEW_CLICK = 8;
    VIEW_CHANGE = 9;
    FORM_SUBMIT = 10;
    ACTIVATE = 11;
}
